[package]
name = "whitescreen"
description = "Create a white screen"
version = "1.0.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/hoshiyuki-tamako/whitescreen"
repository = "https://github.com/hoshiyuki-tamako/whitescreen"
keywords = ["whitescreen", "white", "screen"]
categories = ["command-line-utilities"]

[dependencies]
bevy = "0.14.2"

[profile.release]
strip = true
lto = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
