[package]
name = "whitescreen"
description = "create a white background borderless fullscreen window"
version = "1.0.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/hoshiyuki-tamako/whitescreen"
repository = "https://github.com/hoshiyuki-tamako/whitescreen"
keywords = ["whitescreen", "white", "screen"]
categories = ["command-line-utilities"]
readme = "readme.md"

[dependencies]
bevy = "0.14.2"

[profile.release]
strip = true
lto = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
