[package]
name = "whitescreen"
description = "create a white background borderless fullscreen window"
version = "1.0.4"
edition = "2021"
license = "MIT"
homepage = "https://github.com/hoshiyuki-tamako/whitescreen"
repository = "https://github.com/hoshiyuki-tamako/whitescreen"
keywords = ["whitescreen", "white", "screen"]
categories = ["command-line-utilities"]
readme = "readme.md"

[dependencies]
iced = "0.13.1"

[profile.release]
strip = true
lto = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
